# MathLib

./: CMakeLists.txt  main.cpp  sonar-project.properties
.github/workflows/: build.yml  ci.yml
src/: AdvancedMath.cpp  AdvancedMath.h  BasicMath.cpp  BasicMath.h
tests/: test.cpp
